<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/signinlayout"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="119dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="Welcome to cardiacReader"
        android:id="@+id/well"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="51dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/linear"
        app:layout_constraintTop_toBottomOf="@+id/well"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginStart="25dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="45dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ellipsize="end"
                android:hint="Email..."
                android:maxLength="30"
                android:padding="4dp"
                android:textSize="18dp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:hint="Password..."

                android:inputType="textPassword"
                android:padding="4dp"
                android:textSize="18dp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget"
            android:layout_width="155dp"
            android:layout_height="21dp"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"

            android:gravity="center"
            android:textColor="#043143"
            android:textSize="14dp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:text="Log in!"
            android:textColor="#190404"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="30dp"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/signup"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:layout_marginTop="-9dp"
        android:text="Create a new account!"
        android:textColor="#164A03"
        android:textSize="22dp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginTop="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="--OR--"
        android:textColor="#A17070"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" />

</androidx.constraintlayout.widget.ConstraintLayout>